// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse marks bold 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "bold",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks bold: html 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "bold",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks code 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "code",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks code: html 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "code",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks italic 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "italic",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks italic: html 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "italic",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks link 1`] = `
Object {
  "marks": Array [
    Object {
      "attrs": Object {
        "href": "http://example.org",
        "target": "_blank",
      },
      "type": "link",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks link: html 1`] = `
Object {
  "marks": Array [
    Object {
      "attrs": Object {
        "href": "http://example.org",
        "target": "_blank",
      },
      "type": "link",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks strike 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "strike",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks strike: html 1`] = `
Object {
  "marks": Array [
    Object {
      "type": "strike",
    },
  ],
  "text": "example",
  "type": "text",
}
`;

exports[`parse marks text 1`] = `
Object {
  "text": "example",
  "type": "text",
}
`;

exports[`parse nodes bullet list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "bulletList",
}
`;

exports[`parse nodes bullet list 2`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "bulletList",
}
`;

exports[`parse nodes bullet list: html 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "bulletList",
}
`;

exports[`parse nodes code block 1`] = `
Object {
  "attrs": Object {
    "language": null,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "codeBlock",
}
`;

exports[`parse nodes code block: html 1`] = `
Object {
  "attrs": Object {
    "language": null,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "codeBlock",
}
`;

exports[`parse nodes fence 1`] = `
Object {
  "attrs": Object {
    "language": null,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "codeBlock",
}
`;

exports[`parse nodes fence: lang 1`] = `
Object {
  "attrs": Object {
    "language": "js",
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "codeBlock",
}
`;

exports[`parse nodes hard break 1`] = `
Object {
  "content": Array [
    Object {
      "text": "example1",
      "type": "text",
    },
    Object {
      "type": "hardBreak",
    },
    Object {
      "text": "example2",
      "type": "text",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse nodes hard break: html 1`] = `
Object {
  "content": Array [
    Object {
      "text": "example1",
      "type": "text",
    },
    Object {
      "type": "hardBreak",
    },
    Object {
      "text": "example2",
      "type": "text",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse nodes headings: h1 1`] = `
Object {
  "attrs": Object {
    "level": 1,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse nodes headings: h1 html 1`] = `
Object {
  "attrs": Object {
    "level": 1,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse nodes headings: h2 1`] = `
Object {
  "attrs": Object {
    "level": 2,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse nodes headings: h3 1`] = `
Object {
  "attrs": Object {
    "level": 3,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse nodes headings: h4 1`] = `
Object {
  "attrs": Object {
    "level": 4,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse nodes headings: h5 1`] = `
Object {
  "attrs": Object {
    "level": 5,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse nodes headings: h6 1`] = `
Object {
  "attrs": Object {
    "level": 6,
  },
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "heading",
}
`;

exports[`parse nodes hr 1`] = `
Object {
  "type": "horizontalRule",
}
`;

exports[`parse nodes hr: html 1`] = `
Object {
  "type": "horizontalRule",
}
`;

exports[`parse nodes html 1`] = `
Object {
  "content": Array [
    Object {
      "text": "example",
      "type": "text",
    },
  ],
  "type": "html-node",
}
`;

exports[`parse nodes html disabled 1`] = `
Object {
  "content": Array [
    Object {
      "text": "<custom-element></custom-element>",
      "type": "text",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse nodes html inline 1`] = `
Object {
  "content": Array [
    Object {
      "type": "html-node",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse nodes image 1`] = `
Object {
  "attrs": Object {
    "alt": "example",
    "src": "example.jpg",
    "title": null,
  },
  "type": "image",
}
`;

exports[`parse nodes image: html 1`] = `
Object {
  "attrs": Object {
    "alt": "example",
    "src": "example.jpg",
    "title": null,
  },
  "type": "image",
}
`;

exports[`parse nodes image: inline 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "alt": "example",
        "src": "example.jpg",
        "title": null,
      },
      "type": "image",
    },
  ],
  "type": "paragraph",
}
`;

exports[`parse nodes ordered list 1`] = `
Object {
  "attrs": Object {
    "start": 1,
  },
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "orderedList",
}
`;

exports[`parse nodes ordered list: html 1`] = `
Object {
  "attrs": Object {
    "start": 1,
  },
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example1",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "example2",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "listItem",
    },
  ],
  "type": "orderedList",
}
`;

exports[`parse nodes paragraph 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "text": "example1",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "content": Array [
      Object {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse nodes paragraph: html 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "text": "example1",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "content": Array [
      Object {
        "text": "example2",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parse nodes table 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableHeader",
        },
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableHeader",
        },
      ],
      "type": "tableRow",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example3",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableCell",
        },
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example4",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableCell",
        },
      ],
      "type": "tableRow",
    },
  ],
  "type": "table",
}
`;

exports[`parse nodes table: html 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableHeader",
        },
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableHeader",
        },
      ],
      "type": "tableRow",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example3",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableCell",
        },
        Object {
          "attrs": Object {
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "example4",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "tableCell",
        },
      ],
      "type": "tableRow",
    },
  ],
  "type": "table",
}
`;
